# mini-obj

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
examples/: example.rs
obj_gen/: Cargo.toml
obj_gen/src/: lib.rs
src/: compiler.rs  lib.rs  obj.rs
tests/: integration_tests.rs
