[package]
name = "mini_obj"
version = "0.1.2"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"


[dependencies]
wavefront_obj = { git = "https://github.com/lambdaxymox/wavefront-obj" }
obj = { path = "obj/" }
obj_gen = { path = "obj_gen/" }

[build-dependencies]
obj = { path = "obj/" }
obj_gen = { path = "obj_gen/" }
