[package]
name = "mini_obj"
version = "0.1.3"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "A library for representing simpler forms of geometry for computer graphics with Rust code generation."


[dependencies]
wavefront_obj = { git = "https://github.com/lambdaxymox/wavefront-obj" }
obj = { path = "obj/" }
obj_gen = { path = "obj_gen/" }

[build-dependencies]
obj = { path = "obj/" }
obj_gen = { path = "obj_gen/" }
