[package]
name = "mini_obj"
version = "0.1.6"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "A library for representing simpler forms of geometry for computer graphics with Rust code generation."


[dependencies]
obj = { path = "obj/" }
obj_gen = { path = "obj_gen/" }

[build-dependencies]
obj = { path = "obj/" }
obj_gen = { path = "obj_gen/" }
